--- a/practicas/practica1.ipynb
+++ b/practicas/practica1.ipynb
@@ -286,7 +286,7 @@
         "outputId": "724c5f70-813a-4055-8d50-c130b7df6148"
       },
       "id": "OcpenhGhe8Wv",
-      "execution_count": 416,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -342,7 +342,7 @@
         "outputId": "78864de2-489c-4c39-a04f-cb4c09e0f285"
       },
       "id": "JhrudEhum-ZW",
-      "execution_count": 426,
+      "execution_count": null,
       "outputs": [
         {
           "name": "stdout",
@@ -1043,7 +1043,7 @@
         }
       },
       "id": "VOIeK9cffooz",
-      "execution_count": 84,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2179,19 +2179,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ge-cnhpP-66_",
-        "outputId": "3b057015-22e1-4832-edfb-3cb963fe1346"
+        "outputId": "2acdc636-f57d-47ab-f575-e9e5115df81f"
       },
       "id": "ge-cnhpP-66_",
-      "execution_count": 97,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[4, 1, 4, 4, 4, 2, 4]\n",
-            "[1, 2, 4, 4, 4, 4, 4]\n",
-            "[1, 2, 4, 4, 4, 4, 4]\n",
-            "[1, 2, 4, 4, 4, 4, 4]\n"
+            "[4, 1, 2, 2, 4, 3, 1]\n",
+            "[1, 1, 2, 2, 3, 4, 4]\n",
+            "[1, 1, 2, 2, 3, 4, 4]\n",
+            "[1, 1, 2, 2, 3, 4, 4]\n"
           ]
         }
       ]
@@ -2275,7 +2275,7 @@
         }
       },
       "id": "MOrMGfeGDURj",
-      "execution_count": 199,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2347,7 +2347,7 @@
         "outputId": "a2a52fa6-efc1-4351-e09e-5fe287e71906"
       },
       "id": "QgdvXOxdZC8_",
-      "execution_count": 404,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2412,7 +2412,7 @@
       "source": [
         "from random import randint\n",
         "a=[]\n",
-        "b=[]\n",
+        "\n",
         "n=43\n",
         "print(\" Partidendo del decimal:\",n)\n",
         "print(\"_\"*40)\n",
@@ -2425,10 +2425,18 @@
         "      n1=(n1//2)\n",
         "    n2 = n1//2\n",
         "    re = n1%2\n",
+        "    inv=len(a)-1\n",
         "    a.append(re)\n",
+        "   \n",
         "    print(\"{:9}{:13}{:15}\".format(n1,n2,re))\n",
         "\n",
-        "print(f\"El binario equivalente es:\",a)\n",
+        "newList = a[::-1]\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "print(f\"El binario equivalente es:\",newList)\n",
         "\n",
         "\n"
       ],
@@ -2437,10 +2445,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Kc1nW6AX9ilU",
-        "outputId": "42d90ee6-5822-4217-9976-d24547961a5d"
+        "outputId": "f8fa52c5-b436-4a56-b5f5-b743b1cf6835"
       },
       "id": "Kc1nW6AX9ilU",
-      "execution_count": 443,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -2456,13 +2464,7 @@
             "        5            2              1\n",
             "        2            1              0\n",
             "        1            0              1\n",
-            "El binario equivalente es: [1, 1, 0, 1, 0, 1]\n",
-            "[1]\n",
-            "[1, 1]\n",
-            "[1, 1, 1]\n",
-            "[1, 1, 1, 1]\n",
-            "[1, 1, 1, 1, 1]\n",
-            "[1, 1, 1, 1, 1, 1]\n"
+            "El binario equivalente es: [1, 0, 1, 0, 1, 1]\n"
           ]
         }
       ]
@@ -2489,6 +2491,148 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "#numero aleatorio target\n",
+        "\n",
+        "import random\n",
+        "from random import randint \n",
+        "\n",
+        "for i in range (100):\n",
+        "  target=randint(2,21)\n",
+        "\n",
+        "  for i in range(1):\n",
+        "     while True:\n",
+        "      lista = []\n",
+        "      for j in range(random.randint(2,6)):\n",
+        "        lista.append(random.randint(-10,10))\n",
+        "      if sum(lista)==target:\n",
+        "        print(lista,\"target:\", target)\n",
+        "\n",
+        "        break\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "ULs_OwY2hGXX",
+        "outputId": "c4c4a775-0092-4296-fd9d-6795c87155bb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "ULs_OwY2hGXX",
+      "execution_count": 57,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[0, 10, 10, -6] target: 14\n",
+            "[-6, -1, 10, 3] target: 6\n",
+            "[8, 6, 2, -2, -6] target: 8\n",
+            "[8, -2, 1, -4] target: 3\n",
+            "[-3, 3, 8, -2] target: 6\n",
+            "[10, 3, 2] target: 15\n",
+            "[7, -2, -5, 7] target: 7\n",
+            "[8, 6, 6, -5, -1] target: 14\n",
+            "[7, 4] target: 11\n",
+            "[1, 9] target: 10\n",
+            "[2, 0, 6, -5] target: 3\n",
+            "[8, 8] target: 16\n",
+            "[9, 2, 9, -5] target: 15\n",
+            "[-8, 10, 9, 8] target: 19\n",
+            "[2, -5, 8] target: 5\n",
+            "[-1, -4, 10, 1] target: 6\n",
+            "[3, 2, 1] target: 6\n",
+            "[-8, 9, 6, -10, 6] target: 3\n",
+            "[-1, 1, 9, 3, -9, 7] target: 10\n",
+            "[7, 5, 4, 0] target: 16\n",
+            "[8, 9, 4, 3, -3] target: 21\n",
+            "[2, -8, 5, 10, 10] target: 19\n",
+            "[-4, 6] target: 2\n",
+            "[1, 10, 2] target: 13\n",
+            "[-2, 2, 9, 9, 2] target: 20\n",
+            "[10, -1, -5] target: 4\n",
+            "[-4, -10, 7, 9] target: 2\n",
+            "[-4, -9, 9, 9, -8, 10] target: 7\n",
+            "[5, -8, 1, 6] target: 4\n",
+            "[6, 1, 2, 4] target: 13\n",
+            "[5, 5, 5, 3] target: 18\n",
+            "[6, 9, -6, 9] target: 18\n",
+            "[9, -6] target: 3\n",
+            "[0, 10] target: 10\n",
+            "[10, 7, -6, -3] target: 8\n",
+            "[-3, 7, 7, -9, -2, 10] target: 10\n",
+            "[1, 6] target: 7\n",
+            "[-9, 7, -10, 2, 10, 2] target: 2\n",
+            "[-1, 4] target: 3\n",
+            "[7, -1, 10, -8, 9] target: 17\n",
+            "[4, -9, 7] target: 2\n",
+            "[3, -5, 7, 7, -7] target: 5\n",
+            "[-2, 8] target: 6\n",
+            "[-3, 10, -5, 1, 9, 9] target: 21\n",
+            "[6, 0] target: 6\n",
+            "[0, 8, -3, 0] target: 5\n",
+            "[10, -4] target: 6\n",
+            "[9, 5, 10, -3] target: 21\n",
+            "[0, 0, 3] target: 3\n",
+            "[2, 5] target: 7\n",
+            "[0, 7, 10, -6, -6, 5] target: 10\n",
+            "[8, 3, 7] target: 18\n",
+            "[5, 0] target: 5\n",
+            "[2, 2] target: 4\n",
+            "[1, 2, -1, 4, 4] target: 10\n",
+            "[2, -5, 6] target: 3\n",
+            "[8, -1, 10, -7, 10] target: 20\n",
+            "[5, -2, 8, 10, -8, -3] target: 10\n",
+            "[0, 8, 9] target: 17\n",
+            "[-7, 5, 9, -3] target: 4\n",
+            "[10, 9, 2, -10] target: 11\n",
+            "[4, 8, -3, 4, 9, -9] target: 13\n",
+            "[4, -1, 1, 3] target: 7\n",
+            "[6, -3, 2, 4] target: 9\n",
+            "[-4, 0, 10, 6] target: 12\n",
+            "[-3, 9, 4, -9, 8, 9] target: 18\n",
+            "[1, 8, 10] target: 19\n",
+            "[-5, 9, -8, 8, 10] target: 14\n",
+            "[5, -1, 1, 8] target: 13\n",
+            "[8, -3, 8, 5] target: 18\n",
+            "[6, -2, -2] target: 2\n",
+            "[6, 5, -4] target: 7\n",
+            "[5, 9, 5] target: 19\n",
+            "[2, 10] target: 12\n",
+            "[3, 9, 8, -5, -8] target: 7\n",
+            "[4, 4] target: 8\n",
+            "[4, 7, 3, 0] target: 14\n",
+            "[0, 3, 3, 3] target: 9\n",
+            "[10, -1, -4, -3, 3, 0] target: 5\n",
+            "[2, 6, -8, 6, -4] target: 2\n",
+            "[5, 0, 7, -5] target: 7\n",
+            "[7, 10, -10, 4, -9] target: 2\n",
+            "[-8, 4, 1, 7, 4, 1] target: 9\n",
+            "[-1, 5, 9, 6] target: 19\n",
+            "[9, 2] target: 11\n",
+            "[-4, 8, 7, -4, -5] target: 2\n",
+            "[10, 10, 1] target: 21\n",
+            "[5, 3] target: 8\n",
+            "[9, -1, 8, -8, 9, 2] target: 19\n",
+            "[4, 10, 4] target: 18\n",
+            "[10, 7] target: 17\n",
+            "[6, -1, 2, 8, 4] target: 19\n",
+            "[10, 8, 1, -9] target: 10\n",
+            "[10, 4, 5, 5, -5] target: 19\n",
+            "[9, -8, 7, 10, -3, 2] target: 17\n",
+            "[-5, 10, -5, 5, 2, 9] target: 16\n",
+            "[7, 5, 8, 0, -3, 4] target: 21\n",
+            "[0, 4, 3, 6, -1, -9] target: 3\n",
+            "[0, 7, 3, 3] target: 13\n",
+            "[-5, 3, 5] target: 3\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "id": "71e906cb",
       "metadata": {
@@ -2512,6 +2656,55 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "lista = [[\"Ana\",1],[\"Raúl\",1],[\"Jose\",9],[\"David\",7],[\"Eva\",8],[\"Felipe\",4],[\"DAVID\",9],[\"Isabel\",4],[\"Susana\",5]]\n",
+        "print(lista)\n",
+        "\n",
+        "print(sorted(lista, key=lambda nombre: nombre[1]))\n",
+        "\n",
+        "minimo = min(lista)\n",
+        "\n",
+        "n= len(lista)\n",
+        "print(n)\n",
+        "\n",
+        "print(\"Primer minimo:\", minimo)\n",
+        "\n",
+        "#falta funcion para cambiar el orden de la lista y poner el numero delante del nombre \n",
+        "\n",
+        "while minimo == min(lista):\n",
+        "     del lista[lista.index(minimo)]\n",
+        "\n",
+        "segundo=min(lista)\n",
+        "\n",
+        "\n",
+        "\n",
+        "print(\"El segundo mínimo es\",segundo)\n"
+      ],
+      "metadata": {
+        "id": "ZL9x2LZr8UT-",
+        "outputId": "255e74e6-7915-47d4-b0e3-0656f04b8ee1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "ZL9x2LZr8UT-",
+      "execution_count": 138,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[['Ana', 1], ['Raúl', 1], ['Jose', 9], ['David', 7], ['Eva', 8], ['Felipe', 4], ['Héctor', 9], ['Isabel', 4], ['Susana', 5]]\n",
+            "[['Ana', 1], ['Raúl', 1], ['Felipe', 4], ['Isabel', 4], ['Susana', 5], ['David', 7], ['Eva', 8], ['Jose', 9], ['Héctor', 9]]\n",
+            "9\n",
+            "Primer minimo: ['Ana', 1]\n",
+            "El segundo mínimo es ['David', 7]\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "id": "42fae779",
       "metadata": {
@@ -2531,6 +2724,41 @@
         "\n",
         "![Impares](https://github.com/financieras/pyCourse/blob/main/jupyter/img/impares.jpg?raw=1)"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import random\n",
+        "random.seed()\n",
+        "\n",
+        "# al inicio ponemos las dos siguientes líneas\n",
+        "from datetime import datetime\n",
+        "fecha1=datetime.now()\n",
+        "\n",
+        "for i in range(5):\n",
+        "    while True:\n",
+        "        lista = [random.randint(10,100) for _ in range(4)]\n",
+        "      \n",
+        "\n",
+        "    for i in lista:\n",
+        "        if lista[0]%2==0:\n",
+        "            print(lista)\n",
+        "            break\n",
+        "\n",
+        "# al final ponemos las tres siguientes líneas\n",
+        "fecha2=datetime.now()\n",
+        "diferencia=fecha2-fecha1\n",
+        "print(diferencia.seconds, \"segundos\")\n",
+        "      \n",
+        "\n",
+        "        "
+      ],
+      "metadata": {
+        "id": "87Ci1TGredo_"
+      },
+      "id": "87Ci1TGredo_",
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
