--- a/practicas/practica1.ipynb
+++ b/practicas/practica1.ipynb
@@ -691,10 +691,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "bduvs1bIKw6s",
-        "outputId": "7e5644e7-a414-40d0-bc7e-67406b0d79e1"
+        "outputId": "f40a3832-e369-42f9-f14a-7f0636c756d0"
       },
       "id": "bduvs1bIKw6s",
-      "execution_count": null,
+      "execution_count": 159,
       "outputs": [
         {
           "output_type": "stream",
@@ -2182,7 +2182,7 @@
         "outputId": "2acdc636-f57d-47ab-f575-e9e5115df81f"
       },
       "id": "ge-cnhpP-66_",
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2448,7 +2448,7 @@
         "outputId": "f8fa52c5-b436-4a56-b5f5-b743b1cf6835"
       },
       "id": "Kc1nW6AX9ilU",
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2522,7 +2522,7 @@
         }
       },
       "id": "ULs_OwY2hGXX",
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2658,7 +2658,7 @@
     {
       "cell_type": "code",
       "source": [
-        "lista = [[\"Ana\",1],[\"Raúl\",1],[\"Jose\",9],[\"David\",7],[\"Eva\",8],[\"Felipe\",4],[\"DAVID\",9],[\"Isabel\",4],[\"Susana\",5]]\n",
+        "lista = [[\"Ana\",1],[\"Raúl\",1],[\"Jose\",9],[\"David\",7],[\"Eva\",8],[\"Felipe\",4],[\"David\",7],[\"Isabel\",4],[\"Susana\",5]]\n",
         "print(lista)\n",
         "\n",
         "print(sorted(lista, key=lambda nombre: nombre[1]))\n",
@@ -2675,6 +2675,8 @@
         "while minimo == min(lista):\n",
         "     del lista[lista.index(minimo)]\n",
         "\n",
+        "\n",
+        "\n",
         "segundo=min(lista)\n",
         "\n",
         "\n",
@@ -2683,20 +2685,20 @@
       ],
       "metadata": {
         "id": "ZL9x2LZr8UT-",
-        "outputId": "255e74e6-7915-47d4-b0e3-0656f04b8ee1",
+        "outputId": "3bc951d4-c2c5-4463-e3bd-b0bc9635fa3c",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "id": "ZL9x2LZr8UT-",
-      "execution_count": 138,
+      "execution_count": 150,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[['Ana', 1], ['Raúl', 1], ['Jose', 9], ['David', 7], ['Eva', 8], ['Felipe', 4], ['Héctor', 9], ['Isabel', 4], ['Susana', 5]]\n",
-            "[['Ana', 1], ['Raúl', 1], ['Felipe', 4], ['Isabel', 4], ['Susana', 5], ['David', 7], ['Eva', 8], ['Jose', 9], ['Héctor', 9]]\n",
+            "[['Ana', 1], ['Raúl', 1], ['Jose', 9], ['David', 7], ['Eva', 8], ['Felipe', 4], ['David', 7], ['Isabel', 4], ['Susana', 5]]\n",
+            "[['Ana', 1], ['Raúl', 1], ['Felipe', 4], ['Isabel', 4], ['Susana', 5], ['David', 7], ['David', 7], ['Eva', 8], ['Jose', 9]]\n",
             "9\n",
             "Primer minimo: ['Ana', 1]\n",
             "El segundo mínimo es ['David', 7]\n"
@@ -2735,15 +2737,17 @@
         "from datetime import datetime\n",
         "fecha1=datetime.now()\n",
         "\n",
-        "for i in range(5):\n",
-        "    while True:\n",
-        "        lista = [random.randint(10,100) for _ in range(4)]\n",
         "      \n",
+        "contador = 0\n",
+        "while contador<=2:\n",
+        "  lista = [random.randint(1,100) for i in range(4)]\n",
+        "for i in lista:        # i,v son el index y el valor\n",
+        "      \n",
+        "    if lista[0]%2==0 and lista[1]%2==0 and lista[2]%2==0 and lista[3]%2==0:\n",
+        "      print(lista)   # marca el número impar\n",
+        "contador += 1\n",
         "\n",
-        "    for i in lista:\n",
-        "        if lista[0]%2==0:\n",
-        "            print(lista)\n",
-        "            break\n",
+        "\n",
         "\n",
         "# al final ponemos las tres siguientes líneas\n",
         "fecha2=datetime.now()\n",
