--- a/practicas/practica1.ipynb
+++ b/practicas/practica1.ipynb
@@ -2739,13 +2739,21 @@
         "\n",
         "      \n",
         "contador = 0\n",
-        "while contador<=2:\n",
-        "  lista = [random.randint(1,100) for i in range(4)]\n",
+        "\n",
+        "lista = [random.randint(1,5) for i in range(4)]\n",
         "for i in lista:        # i,v son el index y el valor\n",
         "      \n",
-        "    if lista[0]%2==0 and lista[1]%2==0 and lista[2]%2==0 and lista[3]%2==0:\n",
-        "      print(lista)   # marca el número impar\n",
-        "contador += 1\n",
+        "    if lista[0]%2==0: \n",
+        "      if lista[1]%2==0: \n",
+        "        #if lista[2]%2==0: \n",
+        "          #if lista[3]%2==0:\n",
+        "          \n",
+        "  \n",
+        "\n",
+        "\n",
+        " \n",
+        "            print(lista)   # marca el número impar\n",
+        "    contador += 1\n",
         "\n",
         "\n",
         "\n",
@@ -2758,9 +2766,33 @@
         "        "
       ],
       "metadata": {
-        "id": "87Ci1TGredo_"
+        "id": "87Ci1TGredo_",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "ebd296c4-67c5-49e8-8370-8ad573a7e400"
       },
       "id": "87Ci1TGredo_",
+      "execution_count": 248,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0 segundos\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "a75ABx7c_rRi"
+      },
+      "id": "a75ABx7c_rRi",
       "execution_count": null,
       "outputs": []
     }
