--- a/practicas/practica1.ipynb
+++ b/practicas/practica1.ipynb
@@ -45,122 +45,122 @@
       "cell_type": "code",
       "source": [
         "for i in range(1,101):\n",
-        "    print(i,i**2) "
+        "    print(i,\"-->\",i**2) "
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "QLiGrzViNTHK",
-        "outputId": "289bf93e-38e7-4b47-a21f-0cc58076bd89"
+        "outputId": "b759d8ff-62d7-487c-d020-be412bbd0536"
       },
       "id": "QLiGrzViNTHK",
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "1 1\n",
-            "2 4\n",
-            "3 9\n",
-            "4 16\n",
-            "5 25\n",
-            "6 36\n",
-            "7 49\n",
-            "8 64\n",
-            "9 81\n",
-            "10 100\n",
-            "11 121\n",
-            "12 144\n",
-            "13 169\n",
-            "14 196\n",
-            "15 225\n",
-            "16 256\n",
-            "17 289\n",
-            "18 324\n",
-            "19 361\n",
-            "20 400\n",
-            "21 441\n",
-            "22 484\n",
-            "23 529\n",
-            "24 576\n",
-            "25 625\n",
-            "26 676\n",
-            "27 729\n",
-            "28 784\n",
-            "29 841\n",
-            "30 900\n",
-            "31 961\n",
-            "32 1024\n",
-            "33 1089\n",
-            "34 1156\n",
-            "35 1225\n",
-            "36 1296\n",
-            "37 1369\n",
-            "38 1444\n",
-            "39 1521\n",
-            "40 1600\n",
-            "41 1681\n",
-            "42 1764\n",
-            "43 1849\n",
-            "44 1936\n",
-            "45 2025\n",
-            "46 2116\n",
-            "47 2209\n",
-            "48 2304\n",
-            "49 2401\n",
-            "50 2500\n",
-            "51 2601\n",
-            "52 2704\n",
-            "53 2809\n",
-            "54 2916\n",
-            "55 3025\n",
-            "56 3136\n",
-            "57 3249\n",
-            "58 3364\n",
-            "59 3481\n",
-            "60 3600\n",
-            "61 3721\n",
-            "62 3844\n",
-            "63 3969\n",
-            "64 4096\n",
-            "65 4225\n",
-            "66 4356\n",
-            "67 4489\n",
-            "68 4624\n",
-            "69 4761\n",
-            "70 4900\n",
-            "71 5041\n",
-            "72 5184\n",
-            "73 5329\n",
-            "74 5476\n",
-            "75 5625\n",
-            "76 5776\n",
-            "77 5929\n",
-            "78 6084\n",
-            "79 6241\n",
-            "80 6400\n",
-            "81 6561\n",
-            "82 6724\n",
-            "83 6889\n",
-            "84 7056\n",
-            "85 7225\n",
-            "86 7396\n",
-            "87 7569\n",
-            "88 7744\n",
-            "89 7921\n",
-            "90 8100\n",
-            "91 8281\n",
-            "92 8464\n",
-            "93 8649\n",
-            "94 8836\n",
-            "95 9025\n",
-            "96 9216\n",
-            "97 9409\n",
-            "98 9604\n",
-            "99 9801\n",
-            "100 10000\n"
+            "1 --> 1\n",
+            "2 --> 4\n",
+            "3 --> 9\n",
+            "4 --> 16\n",
+            "5 --> 25\n",
+            "6 --> 36\n",
+            "7 --> 49\n",
+            "8 --> 64\n",
+            "9 --> 81\n",
+            "10 --> 100\n",
+            "11 --> 121\n",
+            "12 --> 144\n",
+            "13 --> 169\n",
+            "14 --> 196\n",
+            "15 --> 225\n",
+            "16 --> 256\n",
+            "17 --> 289\n",
+            "18 --> 324\n",
+            "19 --> 361\n",
+            "20 --> 400\n",
+            "21 --> 441\n",
+            "22 --> 484\n",
+            "23 --> 529\n",
+            "24 --> 576\n",
+            "25 --> 625\n",
+            "26 --> 676\n",
+            "27 --> 729\n",
+            "28 --> 784\n",
+            "29 --> 841\n",
+            "30 --> 900\n",
+            "31 --> 961\n",
+            "32 --> 1024\n",
+            "33 --> 1089\n",
+            "34 --> 1156\n",
+            "35 --> 1225\n",
+            "36 --> 1296\n",
+            "37 --> 1369\n",
+            "38 --> 1444\n",
+            "39 --> 1521\n",
+            "40 --> 1600\n",
+            "41 --> 1681\n",
+            "42 --> 1764\n",
+            "43 --> 1849\n",
+            "44 --> 1936\n",
+            "45 --> 2025\n",
+            "46 --> 2116\n",
+            "47 --> 2209\n",
+            "48 --> 2304\n",
+            "49 --> 2401\n",
+            "50 --> 2500\n",
+            "51 --> 2601\n",
+            "52 --> 2704\n",
+            "53 --> 2809\n",
+            "54 --> 2916\n",
+            "55 --> 3025\n",
+            "56 --> 3136\n",
+            "57 --> 3249\n",
+            "58 --> 3364\n",
+            "59 --> 3481\n",
+            "60 --> 3600\n",
+            "61 --> 3721\n",
+            "62 --> 3844\n",
+            "63 --> 3969\n",
+            "64 --> 4096\n",
+            "65 --> 4225\n",
+            "66 --> 4356\n",
+            "67 --> 4489\n",
+            "68 --> 4624\n",
+            "69 --> 4761\n",
+            "70 --> 4900\n",
+            "71 --> 5041\n",
+            "72 --> 5184\n",
+            "73 --> 5329\n",
+            "74 --> 5476\n",
+            "75 --> 5625\n",
+            "76 --> 5776\n",
+            "77 --> 5929\n",
+            "78 --> 6084\n",
+            "79 --> 6241\n",
+            "80 --> 6400\n",
+            "81 --> 6561\n",
+            "82 --> 6724\n",
+            "83 --> 6889\n",
+            "84 --> 7056\n",
+            "85 --> 7225\n",
+            "86 --> 7396\n",
+            "87 --> 7569\n",
+            "88 --> 7744\n",
+            "89 --> 7921\n",
+            "90 --> 8100\n",
+            "91 --> 8281\n",
+            "92 --> 8464\n",
+            "93 --> 8649\n",
+            "94 --> 8836\n",
+            "95 --> 9025\n",
+            "96 --> 9216\n",
+            "97 --> 9409\n",
+            "98 --> 9604\n",
+            "99 --> 9801\n",
+            "100 --> 10000\n"
           ]
         }
       ]
@@ -320,46 +320,51 @@
     {
       "cell_type": "code",
       "source": [
-        "a=[]\n",
         "\n",
-        "while True:\n",
-        "  n = float(input(\"Indique el número que desea escribir: \"))\n",
+        "n=float(input(\"Indique el número que desea escribir: \"))\n",
+        "b=[]\n",
+        "\n",
+        "while n>=0:\n",
         "  b.append(n)\n",
-        "  if n < 0:\n",
-        "    print(\"Fin del programa.\")\n",
-        "    break\n",
-        "    print(a)\n",
-        " \n",
+        "  n = float(input(\"Indique el número que desea escribir: \"))\n",
+        "  \n",
+        "print(f\"La lista es:\",(b))\n",
         "\n",
+        "m=sum(b)/len(b)\n",
+        "print(f\"La media de la lista es\",m)\n",
+        "\n",
+        "\n",
+        "c=0\n",
+        "for i in b:\n",
+        "  if i>m:\n",
+        "    c+=1\n",
+        "\n",
+        "    \n",
+        "\n",
+        "print((c),\"valores son superiores a la media\")\n",
         "\n"
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 248
+          "base_uri": "https://localhost:8080/"
         },
         "id": "JhrudEhum-ZW",
-        "outputId": "78864de2-489c-4c39-a04f-cb4c09e0f285"
+        "outputId": "e33b99f3-a795-4f0c-a391-ba3dc8db8172"
       },
       "id": "JhrudEhum-ZW",
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "Indique el número que desea escribir: 4\n"
-          ]
-        },
-        {
-          "output_type": "error",
-          "ename": "AttributeError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-426-4c71bd852b96>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mwhile\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m   \u001b[0mn\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfloat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Indique el número que desea escribir: \"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m   \u001b[0mb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mn\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m   \u001b[0;32mif\u001b[0m \u001b[0mn\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Fin del programa.\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mAttributeError\u001b[0m: 'float' object has no attribute 'append'"
+            "Indique el número que desea escribir: 10\n",
+            "Indique el número que desea escribir: 2\n",
+            "Indique el número que desea escribir: 5\n",
+            "Indique el número que desea escribir: -3\n",
+            "La lista es: [10.0, 2.0, 5.0]\n",
+            "La media de la lista es 5.666666666666667\n",
+            "1 valores son superiores a la media\n"
           ]
         }
       ]
@@ -555,17 +560,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "GBAoSM0ks27I",
-        "outputId": "9bf1c67e-bbf3-4628-fe80-813b0ab8194d"
+        "outputId": "52fc7b85-f293-4073-e67a-b3e5645482d9"
       },
       "id": "GBAoSM0ks27I",
-      "execution_count": null,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "101\n",
-            "1,101,It is a prime number\n"
+            "945\n",
+            "1,3,5,7,9,15,21,27,35,45,63,105,135,189,315,945,No es un numero primo\n"
           ]
         }
       ]
@@ -669,18 +674,22 @@
     {
       "cell_type": "code",
       "source": [
+        "import random\n",
+        "n=random.randint(1,20)\n",
+        "\n",
         "def rectangulo(n):\n",
         "    matriz = []\n",
         "    for i in range(n):\n",
         "        matriz.append([])\n",
         "        for j in range(3*n):\n",
-        "            if i>(j*3):\n",
-        "              matriz[i].append(0)\n",
-        "            else:\n",
+        "            if j<(3*n-i*3):\n",
         "              matriz[i].append(1)\n",
+        "            else:\n",
+        "              matriz[i].append(0)\n",
         "    return matriz\n",
         "\n",
-        "n =3 # randint(1,3)\n",
+        "\n",
+        "\n",
         "matrix = rectangulo(n)\n",
         "\n",
         "for i in range(n):\n",
@@ -691,18 +700,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "bduvs1bIKw6s",
-        "outputId": "f40a3832-e369-42f9-f14a-7f0636c756d0"
+        "outputId": "10486294-347f-41bf-da2f-ff24dc721741"
       },
       "id": "bduvs1bIKw6s",
-      "execution_count": 159,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "1 1 1 1 1 1 1 1 1\n",
-            "0 1 1 1 1 1 1 1 1\n",
-            "0 1 1 1 1 1 1 1 1\n"
+            "1 1 1\n"
           ]
         }
       ]
@@ -746,22 +753,22 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "9em07l_GUKgj",
-        "outputId": "84772197-dd7c-401b-b6c8-39839aa0fc38"
+        "outputId": "5ff22f81-dab6-4bf7-b431-264cfd34b399"
       },
       "id": "9em07l_GUKgj",
-      "execution_count": null,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Cloning into 'pyCourse'...\n",
-            "remote: Enumerating objects: 2451, done.\u001b[K\n",
-            "remote: Counting objects: 100% (755/755), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (291/291), done.\u001b[K\n",
-            "remote: Total 2451 (delta 533), reused 643 (delta 461), pack-reused 1696\u001b[K\n",
-            "Receiving objects: 100% (2451/2451), 3.13 MiB | 24.27 MiB/s, done.\n",
-            "Resolving deltas: 100% (1741/1741), done.\n"
+            "remote: Enumerating objects: 2466, done.\u001b[K\n",
+            "remote: Counting objects: 100% (770/770), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (305/305), done.\u001b[K\n",
+            "remote: Total 2466 (delta 542), reused 644 (delta 462), pack-reused 1696\u001b[K\n",
+            "Receiving objects: 100% (2466/2466), 3.14 MiB | 5.51 MiB/s, done.\n",
+            "Resolving deltas: 100% (1750/1750), done.\n"
           ]
         }
       ]
@@ -777,10 +784,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "WiYOzEw8VhiK",
-        "outputId": "414ba5f3-56ca-4933-f8e8-d28d10cce785"
+        "outputId": "70351da3-8712-4c6e-8447-b1fdf15dcb97"
       },
       "id": "WiYOzEw8VhiK",
-      "execution_count": null,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "stream",
@@ -797,11 +804,10 @@
         "import pandas as pd\n",
         "\n",
         "\n",
-        "palabra = 'father'\n",
+        "\n",
         "f = open(\"frankenstein.txt\")  # abrimos el archivo y lo asignamos a la variable f (file)\n",
         "libro = f.read()              # leemos el fichero\n",
-        "n = libro.count(palabra)      # contamos la palabra, es case sensitive\n",
-        "f.close()                     # cerramos el fichero\n",
+        "\n",
         "\n",
         "\n",
         "\n",
@@ -816,10 +822,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "dqY42wyiVmoz",
-        "outputId": "13a1f96a-a2e7-449b-9fd3-d89e98b291d4"
+        "outputId": "7214a84e-ee14-4d07-d33f-e086740ffdbb"
       },
       "id": "dqY42wyiVmoz",
-      "execution_count": null,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "stream",
@@ -887,13 +893,17 @@
       "source": [
         "from random import randrange\n",
         "\n",
-        "l = [randrange(-98,100,2) for i in range(6,16)] + [randrange(-99,100,2)]\n",
-        "l.sort()\n",
-        "print(*l)\n",
-        "\n",
-        "for i,v in enumerate(l):        # i,v son el index y el valor\n",
+        "def funcion1():\n",
+        "  l = [randrange(-98,100,2) for i in range(6,16)] + [randrange(-99,100,2)]\n",
+        "  l.sort()\n",
+        "  print(*l)\n",
+        "  \n",
+        "  for i,v in enumerate(l):        # i,v son el index y el valor\n",
         "    if v%2:\n",
-        "        print(v)   # marca el número impar\n",
+        "      print(v)\n",
+        " \n",
+        "prueba=funcion1()\n",
+        "print(prueba)   # marca el número impar\n",
         "\n"
       ],
       "metadata": {
@@ -901,17 +911,18 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "hysAkmk3jAI-",
-        "outputId": "de7ad1a4-1bf2-4067-dc75-e6d96988f112"
+        "outputId": "259e0013-8e10-4c79-be6a-8da7f30096f3"
       },
       "id": "hysAkmk3jAI-",
-      "execution_count": null,
+      "execution_count": 51,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "-58 -48 -44 -30 -24 -11 4 20 48 52 88\n",
-            "-11\n"
+            "-94 -76 -38 0 9 14 18 32 76 92 96\n",
+            "9\n",
+            "None\n"
           ]
         }
       ]
@@ -1018,7 +1029,7 @@
         "\n",
         "#numero aleatorio\n",
         "from random import randint \n",
-        "b=17 #randint(2,10001) \n",
+        "b=randint(2,10001) \n",
         "  \n",
         "\n",
         "  \n",
@@ -2691,7 +2702,7 @@
         }
       },
       "id": "ZL9x2LZr8UT-",
-      "execution_count": 150,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2773,7 +2784,7 @@
         "outputId": "ebd296c4-67c5-49e8-8370-8ad573a7e400"
       },
       "id": "87Ci1TGredo_",
-      "execution_count": 248,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
