--- a/practicas/practica2.ipynb
+++ b/practicas/practica2.ipynb
@@ -71,11 +71,11 @@
         "\n"
       ],
       "metadata": {
-        "id": "2NbVKdAzJxKt",
-        "outputId": "a6105c5b-005b-4d65-9020-dda07bd795d0",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "2NbVKdAzJxKt",
+        "outputId": "a6105c5b-005b-4d65-9020-dda07bd795d0"
       },
       "id": "2NbVKdAzJxKt",
       "execution_count": 13,
@@ -152,11 +152,11 @@
         "c1.ordena(c2,c3)\n"
       ],
       "metadata": {
-        "id": "Mf1yZkMgTfj_",
-        "outputId": "eaaa0f70-cdf0-46a4-d1b4-e5e1ac4689c1",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Mf1yZkMgTfj_",
+        "outputId": "eaaa0f70-cdf0-46a4-d1b4-e5e1ac4689c1"
       },
       "id": "Mf1yZkMgTfj_",
       "execution_count": 63,
@@ -198,6 +198,87 @@
         "* Crear dos objetos del tipo rectángulo y otros dos objetos del tipo circulo\n",
         " - proporcione valores aleatorios a sus parámetros\n",
         " - calcule sus superficies y perímetros redondeando a dos decimales"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Rectangulo:\n",
+        "    def __init__(self, ancho, largo):\n",
+        "        self.ancho = ancho\n",
+        "        self.largo=largo\n",
+        "        \n",
+        "    def area_rectangulo(self):\n",
+        "        return self.largo*self.ancho\n",
+        "    \n",
+        "    def perimetro_rectangulo(self):\n",
+        "        return 2*self.largo+2*self.ancho\n",
+        "    \n",
+        "import random\n",
+        "\n",
+        "n1=(random.randint(0,1000))         #creamos los numeros aleatorios\n",
+        "n2=(random.randint(0,1000))\n",
+        "n3=(random.randint(0,1000))\n",
+        "n4=(random.randint(0,1000))\n",
+        "\n",
+        "\n",
+        "print(n1)                           #imprimimos los dos primeros para ver que resultado sale \n",
+        "print(n2)\n",
+        "\n",
+        "h1 = Rectangulo(n1,n2)            \n",
+        "h2 = Rectangulo(n3,n4)\n",
+        "print(\"Área Rectangulo 1:\", round(h1.area_rectangulo(),2))          #area rectangulo 1 coincide con los numeros obtenidos en n1 y n2\n",
+        "print(\"Perímetro Rectangulo 1:\", round(h1.perimetro_rectangulo(),2))   #perimetro rectangulo 1 coincide con los numeros obtenidos en n1 y n2\n",
+        "print(\"Área Rectangulo 2:\", round(h2.area_rectangulo(),2))\n",
+        "print(\"Perímetro Rectangulo 2:\", round(h2.perimetro_rectangulo(),2))\n",
+        "\n",
+        "import math\n",
+        "class Circulo:\n",
+        "    def __init__(self, radio):\n",
+        "        self.radio = radio\n",
+        "        \n",
+        "    def perimetro_circulo(self):\n",
+        "        return 2*math.pi*self.radio\n",
+        "\n",
+        "    def area_circulo(self):\n",
+        "        return math.pi*self.radio**2\n",
+        "    \n",
+        "n5=(random.randint(0,1000))\n",
+        "n6=(random.randint(0,1000))\n",
+        "\n",
+        "c1 = Circulo(n5)\n",
+        "c2 = Circulo(n6)\n",
+        "print(\"Área Circulo 1:\",round(c1.area_circulo(),2))\n",
+        "print(\"Perímetro Circulo 1:\", round(c1.perimetro_circulo(),2))\n",
+        "print(\"Área Circulo 2:\",round(c2.area_circulo(),2))\n",
+        "print(\"Perímetro Circulo 2:\", round(c2.perimetro_circulo(),2))\n"
+      ],
+      "metadata": {
+        "id": "9EzYnd_4BYVs",
+        "outputId": "426ddb01-f7a6-4f28-82a7-8a8c92b568f3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "9EzYnd_4BYVs",
+      "execution_count": 86,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "208\n",
+            "546\n",
+            "Área Rectangulo 1: 113568\n",
+            "Perímetro Rectangulo 1: 1508\n",
+            "Área Rectangulo 2: 6072\n",
+            "Perímetro Rectangulo 2: 314\n",
+            "Área Circulo 1: 463246.69\n",
+            "Perímetro Circulo 1: 2412.74\n",
+            "Área Circulo 2: 2345186.35\n",
+            "Perímetro Circulo 2: 5428.67\n"
+          ]
+        }
       ]
     },
     {
